@startuml
title US016 – "As a User, I want to put for sale a publication in my library in an auction" CD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

'=== Classes ===
class PublicationSaleAuctionUI {
}

class PublicationSaleAuctionController {
  - _iLibraryRepo: ILibraryRepo
  - _iAuctionRepo: IAuctionRepo
  - _auctionFactory: AuctionFactory
  --
  + getLibraryItemsIdList(userId: UserId): List<ItemId>
  + putItemIdOnAuction(itemId: ItemId, startPrice: Price, reservePrice: Price,
    outrightPrice: Price, startDate: ZonedDateTime, endDate: ZonedDateTime): Auction
}

interface ILibraryRepo {
  + addLibrary(userId: UserId): Library
  + findLibraryByUserId(userId: UserId): Library
  + getItemsInLibraryByUserId(userId: UserId): List<ItemId>
}

class MemoLibraryRepo {
  - DATA: Map<LibraryId, Library>
  - _libraryFactory: LibraryFactory
}

class Library {
  - _libraryId: LibraryId
  - _itemsId: List<ItemId>
  --
  + getItemsIdInLibrary(): List<ItemId>
  + addItemIdToLibrary(itemId: ItemId): boolean
  + getItemId(itemId: ItemId): ItemId
}

class ItemId {
  - _itemId : ItemId
}

interface IAuctionRepo {

}

class MemoAuctionRepo {
  - DATA: Map<AuctionId, Auction>
}

class AuctionFactory {
  + createAuction(itemId: ItemId, startingPrice: Price, reservePrice: Price,
    outrightPrice: Price, startDate: ZonedDateTime, endDate: ZonedDateTime): Auction
}

class Auction {
  - _auctionId: AuctionId
  - _itemsId: List<ItemId>
  - _startingPrice: Price
  - _reservePrice: Price
  - _outrightPrice: Price
  - _auctionStartDate: ZonedDateTime
  - _auctionEndDate: ZonedDateTime
}

'=== Relationships ===
PublicationSaleAuctionUI "1" ..> "1" PublicationSaleAuctionController : invokes

PublicationSaleAuctionController "1" ..> "1" ILibraryRepo : uses
PublicationSaleAuctionController "1" ..> "1" IAuctionRepo : uses
PublicationSaleAuctionController "1" ..> "1" AuctionFactory : uses

ILibraryRepo "1" <|.. "1" MemoLibraryRepo : implements
IAuctionRepo "1" <|.. "1" MemoAuctionRepo : implements

MemoLibraryRepo "1" --> "*" Library : manages
Library "1" --> "*" ItemId : stores

ItemId "1" --> "0..1" Auction : references

AuctionFactory "1" ..> "*" Auction : creates

@enduml